# rustychess

./: .gitignore  Cargo.toml  PERFT_DIAGNOSTIC_NOTES.txt  README.md  index.html  index.js  package-lock.json  package.json
.cargo/: config.toml
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs  main.rs  perf.rs
src/core/: board.rs  castling.rs  cli.rs  constlib.rs  mod.rs  move.rs  movegen.rs  piece.rs  position.rs  state.rs  tests.rs  zobrist.rs
src/diff/: corpus.rs  harness.rs  mod.rs  report.rs
src/evaluate/: evaluate.rs  mod.rs  nnue.rs
src/search/: alphabeta.rs  mod.rs  search.rs  tt.rs
src/uci/: stockfish.rs
static/: Knight.mtl  Pawn.mtl  Rook.mtl
web/: Cargo.toml  index.html
web/src/: main.rs
