[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo-net = { version = "0.6.0", features = ["websocket"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
wasm-bindgen-futures = "0.4.56"
yew = { version = "0.22.0", features = ["csr"] }
futures-util = "0.3"
futures-channel = "0.3"
gloo-timers = { version = "0.3.0", features = ["futures"] }
web-sys = { version = "0.3.83", features = [
    "HtmlAudioElement",
] }